login ,register ,logout and refresh
